crates/ruff/src/rules/flake8_async/snapshots/ruff__rules__flake8_async__tests__ASY100_ASY100.py.snap
---
source: crates/ruff/src/rules/flake8_async/mod.rs
---
ASY100.py:7:5: ASY100 Async functions should not call a blocking HTTP method
  |
7 | async def foo():
8 |     urllib.request.urlopen("http://example.com/foo/bar").read()
  |     ^^^^^^^^^^^^^^^^^^^^^^ ASY100
  |

ASY100.py:11:5: ASY100 Async functions should not call a blocking HTTP method
   |
11 | async def foo():
12 |     requests.get()
   |     ^^^^^^^^^^^^ ASY100
   |

ASY100.py:15:5: ASY100 Async functions should not call a blocking HTTP method
   |
15 | async def foo():
16 |     httpx.get()
   |     ^^^^^^^^^ ASY100
   |

ASY100.py:19:5: ASY100 Async functions should not call a blocking HTTP method
   |
19 | async def foo():
20 |     requests.post()
   |     ^^^^^^^^^^^^^ ASY100
   |

ASY100.py:23:5: ASY100 Async functions should not call a blocking HTTP method
   |
23 | async def foo():
24 |     httpx.post()
   |     ^^^^^^^^^^ ASY100
   |


