crates/ruff/src/rules/flake8_async/snapshots/ruff__rules__flake8_async__tests__ASYNC102_ASYNC102.py.snap
---
source: crates/ruff/src/rules/flake8_async/mod.rs
---
ASYNC102.py:5:5: ASYNC102 Async functions should not call synchronous `os` methods
  |
5 | async def foo():
6 |     os.popen()
  |     ^^^^^^^^ ASYNC102
  |

ASYNC102.py:9:5: ASYNC102 Async functions should not call synchronous `os` methods
   |
 9 | async def foo():
10 |     os.spawnl()
   |     ^^^^^^^^^ ASYNC102
   |


